--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -46,11 +46,11 @@
                   </div>
               <!-- Producten Sectie -->
               <div class="titeltext_centered">
-                <h1>Wat verkopen wij?</h1>
+                <h1>Wat verkopen w-ei?</h1>
               </div>
               <div class="mini_producten_container">
                   <div class="mini_producten">
-                      <img src="reschouscres/Melomakarona.png" alt="mini_melomakarona" width="400px">
+                      <img src="reschouscres/Melomakarona.jpg" alt="mini_melomakarona" width="400px">
                       <h2>Melomakarona</h2>
                   </div>
                   <div class="mini_producten">
