--- a/BakkerEi/Producten.html
+++ b/BakkerEi/Producten.html
@@ -34,16 +34,16 @@
             <div class="container">
                 <div class="titeltekst">
                     <h2>Melomakarona - Griekse Kerstkoekjes</h2>
-                    <p>Heerlijk geurende koekjes met een zachte textuur, gemaakt van olijfolie, sinaasappel en warme specerijen. Na het bakken royaal ondergedompeld in een honing-siroop en afgewerkt met een topping van fijngemalen walnoten. Perfect als zoete verwennerij bij de feestdagen of gewoon bij een kop koffie.</p>
+                    <p>Heerlijk geurende koekjes met een zachte textuur, gemaakt van ol-ei-folie, sinaasappel en warme specer-ei-en. Na het bakken royaal ondergedompeld in een honing-s-ei-roop en afgewerkt met een topping van f-ei-ngemalen walnoten. Perfect als zoete verwenner-ei bij de feestdagen of gewoon bij een kop koff-ei.</p>
                 </div>
                 <div class="melomakarona">
-                    <img src="reschouscres/Melomakarona.png" alt="Melomakarona" class="product_afbeelding">
+                    <img src="reschouscres/Melomakarona.jpg" alt="Melomakarona" class="product_afbeelding">
                 </div>
             </div>
             <div id="Tsoureki" class="container">
                 <div class="titeltekst">
                     <h2>Tsoureki - Grieks Paasbrood</h2>
-                    <p>Tsoureki is een zacht, lichtzoet brood dat traditioneel wordt gebakken tijdens feestdagen zoals Pasen, maar het smaakt het hele jaar door heerlijk. Dit gevlochten brood heeft een subtiele smaak van sinaasappel en wordt gemaakt met speciale kruiden die het een unieke geur en smaak geven. De goudbruine korst is soms afgewerkt met amandelschaafsel, wat zorgt voor een extra goede bite (die ook lekker fris is). Tsoureki is perfect bij het ontbijt, als tussendoortje met wat boter of jam, of gewoon bij een kop koffie of thee. Een brood om te delen en van te genieten!</p>
+                    <p>Tsoureki is een zacht, lichtzoet brood dat tradition-ei-l wordt gebakken tijdens f-ei-stdagen zoals Pasen, maar het smaakt het hele jaar door heerl-ei-k. Dit gevlochten brood heeft een subt-ei-le smaak van sinaasappel en wordt gemaakt met speciale kruiden die het een unieke geur en smaak g-ei-ven. De goudbruine korst is soms afgewerkt met amandelschaafsel, wat zorgt voor een extra goede b-ei-te (die ook lekker fris is). Tsoureki is perfect bij het ontb-ei-t, als tussendoortje met wat boter of jam, of gewoon bij een kop koffie of thee. Een brood om te delen en van te genieten!</p>
                 </div>
                 <div class="melomakarona">
                     <img src="reschouscres/Tsoureki.png" alt="Melomakarona" class="product_afbeelding">
@@ -52,7 +52,7 @@
             <div id="Kourabiedes" class="container">
                 <div class="titeltekst">
                     <h2>Kourabiedes - Griekse Sneeuwkoeken</h2>
-                    <p>Kourabiedes zijn klassieke Griekse koekjes, perfect voor feestelijke momenten. Deze zachte, boterige koekjes worden gemaakt met een rijke hoeveelheid roomboter en een vleugje amandel, wat ze een heerlijke smaak en textuur geeft. Na het bakken worden ze royaal bestrooid met poedersuiker, wat zorgt voor een zoete en zachte afwerking. Het resultaat is een heerlijk smeltend koekje dat elke gelegenheid extra speciaal maakt. Ideaal bij een kop koffie of als zoete traktatie bij de feestdagen.</p>
+                    <p>Kourabiedes zijn klassieke Griekse koekjes, perfect voor feestelijke momenten. Deze zachte, boterige koekjes worden gemaakt met een r-ei-ke hoeveelh-ei-d roomboter en een vleugje amandel, wat ze een heerl-ei-ke smaak en textuur geeft. Na het bakken worden ze royaal bestrooid met poeders-ei-ker, wat zorgt voor een zoete en zachte afwerking. Het resultaat is een heerl-ei-k smeltend koekje dat elke gelegenheid extra speciaal maakt. Ideaal bij een kop koffie of als zoete traktatie bij de feestdagen, jamm-ei.</p>
                 </div>
                 <div class="melomakarona">
                     <img src="reschouscres/Kourabiedes.jpg" alt="Melomakarona" class="product_afbeelding">
