--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -32,7 +32,7 @@
     <main>
         <div id="ons_team">
             <div class="titeltekst"><h2>Wie zijn wij?</h2></div>
-            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor economie. Ons idee was om voor dat project een eigen bedrijf te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk geïndigd, maar toen we in 2023 spullen mocht verkopen, hebben wij het bedrijf teruggebracht, en nu verkopen we jaarlijks bij de Were-di Kerstmarkt.</p>
+            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor ei-conomie. Ons id-ei was om voor dat project een eigen bedr-ei-f te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk ge-ei-ndigd, maar toen we in 2023 spullen mocht verkopen, hebben wij het bedr-ei-f teruggebracht, en nu verkopen we jaarl-ei-ks bij de Were-di Kerstmarkt.</p>
         </div>
         
         <div id="ons_merk">
