--- a/BakkerEi/Contact.html
+++ b/BakkerEi/Contact.html
@@ -30,8 +30,8 @@
     </header>
     
         <div class="contact">
-            <h1>Wilt U contact opnemen?</h1><!-- Bestaat niet -->
-            <h2>Email: Bakker-Ei@isgeweldig.com</h2>
+            <h1>Wilt U contact opn-ei-men?</h1><!-- Bestaat niet -->
+            <h2>Ei-mail: Bakker-Ei@isgeweldig.com</h2>
             <h2></h2>
             <h2>Telefoonnummer: +30 225537-34</h2> 
         </div>
