meer ei grappig HAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHAHA
grappen door th-ei-n

--- a/BakkerEi/Verhaal.html
+++ b/BakkerEi/Verhaal.html
@@ -32,12 +32,12 @@
     <main>
         <div id="ons_team">
             <div class="titeltekst"><h2>Wie zijn wij?</h2></div>
-            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor ei-conomie. Ons id-ei was om voor dat project een eigen bedr-ei-f te starten. Na veel brainstormen zijn we op het idee gekomen om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk ge-ei-ndigd, maar toen we in 2023 spullen mocht verkopen, hebben wij het bedr-ei-f teruggebracht, en nu verkopen we jaarl-ei-ks bij de Were-di Kerstmarkt.</p>
+            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor ei-conomie. Ons id-ei was om voor dat project een eigen bedr-ei-f te starten. Uit-ei-ndelijk was het ei gelegd om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk ge-ei-ndigd, maar toen we in 2023 producten mocht verkopen, hebben w-ei het bedr-ei-f teruggebracht, en nu verkopen we jaarl-ei-ks b-ei de Were-d-ei Kerstmarkt.</p>
         </div>
         
         <div id="ons_merk">
             <div class="titeltekst"><h2>Ons merk</h2></div>
-            <p>Het logo en de kleuren die bij Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werdt onze hoofdkleur en de binnen kant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken, en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</p>
+            <p>Het logo en de kleuren die b-ei Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werd onze hoofdkleur en de binnenkant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken (succesvol), en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</p>
         </div>
     </main>
 
