--- a/BakkerEi/ons-super-ei.html
+++ b/BakkerEi/ons-super-ei.html
@@ -1,50 +1,42 @@
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
-skibidi
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <link rel="stylesheet" href="https://use.typekit.net/rer3xgb.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bakker-Ei!</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
+</head>
+<script src="hamburger.js"></script>
+<body class="Producten_Body">
+    <header>
+        <a href="Index.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
+        <a href="Producten.html" class="knop_href" id="producten_header"><div class="knop"><h2>Producten</h2></div></a>
+        <a href="Verhaal.html" class="knop_href" id="verhaal"><div class="knop" id="verhaal"> <h2>Over ons</h2> </div></a>
+        <a href="Contact.html" class="knop_href" id="contact"><div class="knop" id="contact"> <h2>Contact</h2> </div></a>
+        <div class="hamburger-menu">
+            <div class="hamburger-icon">
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
+            <nav class="menu-items">
+                <a href="Producten.html"><p>Producten</p></a>
+                <a href="Verhaal.html"><p>Over Ons</p></a>
+                <a href="Contact.html"><p>Contact</p></a>
+            </nav>
+        </div>
+    </header>
+    <video autoplay loop style="width: 100%; height: 100%; object-fit: fill;">
+        <source src="reschouscres/ons_super_ei.mp4" type="video/mp4">
+    </video>
+    <script>
+        document.getElementById('video').play().catch(function(error) {
+            console.log('Autoplay blocked. Attempting to unmute and play on interaction...');
+            document.body.addEventListener('click', function() {
+                document.getElementById('video').play();
+            });
+        });
+    </script>
+</body>
