Kleine fixes bij mini producten

--- a/BakkerEi/Index.html
+++ b/BakkerEi/Index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="./reschouscres/logo.png" type="image/x-icon">
 </head> 
-<script src="script.js" defer></script>
+<script src="script.js" defer>
+  
+</script>
 <body>
   <header>
     <a href="Index.html"><img src="reschouscres/logo.png" class="logo" width="150px"></a>
@@ -50,15 +52,15 @@
               </div>
               <div class="mini_producten_container">
                   <div class="mini_producten">
-                      <img src="reschouscres/Melomakarona.jpg" alt="mini_melomakarona" width="400px">
+                      <img src="reschouscres/Melomakarona.jpg" alt="mini_melomakarona" width="375px">
                       <h2>Melomakarona</h2>
                   </div>
                   <div class="mini_producten">
-                      <img src="reschouscres/Tsoureki.png" alt="mini_tsoureki" width="400px">
+                      <img src="reschouscres/Tsoureki.png" alt="mini_tsoureki" width="375px">
                       <h2>Tsoureki</h2>
                   </div>
                   <div class="mini_producten">
-                      <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="400px">
+                      <img src="reschouscres/Kourabiedes.jpg" alt="Kourabiedes" width="375px">
                       <h2>Kourabiedes</h2>
                   </div>
                 </div>
