--- a/Verhaal.html
+++ b/Verhaal.html
@@ -32,7 +32,7 @@
     <main>
         <div id="ons_team">
             <div class="titeltekst"><h2>Wie zijn wij?</h2></div>
-            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor ei-conomie. Ons id-ei was om voor dat project een eigen bedr-ei-f te starten. Uit-ei-ndelijk was het ei gelegd om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk ge-ei-ndigd, maar toen we in 2023 producten mocht verkopen, hebben w-ei het bedr-ei-f teruggebracht, en nu verkopen we jaarl-ei-ks b-ei de Were-d-ei Kerstmarkt.</p>
+            <p>Wij zijn een bakkerij die gestart is door 4 leerlingen uit het Were-di, als een schoolproject voor ei-conomie. Ons id-ei was om voor dat project een eigen bedr-ei-f te starten. Uit-ei-ndelijk was het ei gelegd om een bakkerij te maken die Griekse producten verkoopt. (aangezien een van de stichters Grieks is). Na dit schoolproject was het idee van Bakker-Ei eigenlijk ge-ei-ndigd, maar toen we in 2023 producten mocht verkopen, hebben w-ei het bedr-ei-f teruggebracht, en nu verkopen we jaarl-ei-ks b-ei de Were-d-ei Kerstmarkt. (met de uitzondering van 2025 want dat mocht niet...)</p>
         </div>
         
         <div id="ons_merk">
