--- a/Verhaal.html
+++ b/Verhaal.html
@@ -37,7 +37,7 @@
         
         <div id="ons_merk">
             <div class="titeltekst"><h2>Ons merk</h2></div>
-            <p>Het logo en de kleuren die b-ei Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werd onze hoofdkleur en de binnenkant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om Selton boos te maken (succesvol), en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</p>
+            <p>Het logo en de kleuren die b-ei Bakker-Ei gebruikt worden zit een verhaal achter. de kleuren zijn gekozen door een foto van Tsoureki te maken, en daar de kleuren van te pakken. De buitenkant van de tsoureki werd onze hoofdkleur en de binnenkant gebruiken we als accentkleur (Zoals te zien in het logo) De naam is eigenlijk vrij simpel, Yannis had bakkerij fout geschreven om ██████ boos te maken (succesvol), en later besloten we om dit als onze naam te gebruiken, en daarom ook 2 eieren in het logo.</p>
         </div>
     </main>
 
